--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="../assets/styles/style.css">
 </head>
 <body>
+
+    <div id="adivinar"></div>
     <div id="container">
         
     </div>
+    <!-- <button>Start</button> -->
 </body>
 <script type="module" src="../src/index.js"></script>
 </html>
