--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
+    <title>Ahorcado</title>
 </head>
 <body>
-
+     <h1>Ahorcado del diablo</h1>
     <div id="adivinar"></div>
     <div id="container">
         
