--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../assets/styles/style.css" />
+    <link rel="icon" href="../assets/images/game-development.png">
     <title>Ahorcado</title>
-</head>
-<body>
-     <h1>Ahorcado del diablo</h1>
-    <div id="adivinar"></div>
-    <div id="container">
-        
+  </head>
+
+  <body>
+    <h1>Ahorcado del diablo</h1>
+    <!-- <div id="timer" style="color: rgb(0, 0, 0);">00:36</div> -->
+    <div class="container.body">
+      <img class="body" id="parts" src="../assets/images/1.png" alt="" srcset="">
     </div>
+    <div id="guess"></div>
+    <div id="container"></div>
+
     <!-- <button>Start</button> -->
-</body>
-<script type="module" src="../src/index.js"></script>
+  </body>
+  <script type="module" src="../src/index.js"></script>
 </html>
