--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,33 @@
   </head>
 
   <body>
+
+
+    <!-- <FORM name=form action="TU_PAGINA_WEB.HTML">
+      <P>Usuario:<INPUT type=text name=login> 
+      <INPUT onclick=go() type=button value=Acceder>
+    </FORM>  -->
+
+    <div id="etiqueta">
+      <div class="content">
+        <h4>Game Over bitch</h4>
+        <p>The correct word was: <b>perro</b></p>
+        <button id="play_again">Play Again</button>
+      </div>
+    </div>
+    
     <h1>Ahorcado del diablo</h1>
-    <!-- <div id="timer" style="color: rgb(0, 0, 0);">00:36</div> -->
+    <!-- <div id="timer" style="color: rgb(0, 0, 0);">00:00</div> -->
     <div class="container.body">
       <img class="body" id="parts" src="../assets/images/1.png" alt="" srcset="">
     </div>
     <div id="guess"></div>
     <div id="container"></div>
+    <!-- counter -->
+  <div id="counter">
+    <span id="attempts">7</span>
+  </div>
 
-    <!-- <button>Start</button> -->
   </body>
   <script type="module" src="../src/index.js"></script>
 </html>
