--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,19 @@
       <P>Usuario:<INPUT type=text name=login> 
       <INPUT onclick=go() type=button value=Acceder>
     </FORM>  -->
-
+<!-- 
     <div id="etiqueta">
       <div class="content">
         <h4>Game Over bitch</h4>
         <p>The correct word was: <b>perro</b></p>
         <button id="play_again">Play Again</button>
       </div>
-    </div>
+    </div> -->
     
     <h1>Ahorcado del diablo</h1>
     <!-- <div id="timer" style="color: rgb(0, 0, 0);">00:00</div> -->
     <div class="container.body">
-      <img class="body" id="parts" src="../assets/images/1.png" alt="" srcset="">
+      <img class="body" id="parts" src="" alt="" srcset="">
     </div>
     <div id="guess"></div>
     <div id="container"></div>
