--- a/public/index.html
+++ b/public/index.html
@@ -4,30 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/styles/style.css" />
-    <link rel="icon" href="../assets/images/game-development.png">
+    <link rel="icon" href="../assets/images/pikachu.png">
     <title>Ahorcado</title>
   </head>
 
   <body>
 
 
-    <!-- <FORM name=form action="TU_PAGINA_WEB.HTML">
-      <P>Usuario:<INPUT type=text name=login> 
-      <INPUT onclick=go() type=button value=Acceder>
-    </FORM>  -->
-<!-- 
-    <div id="etiqueta">
-      <div class="content">
-        <h4>Game Over bitch</h4>
-        <p>The correct word was: <b>perro</b></p>
-        <button id="play_again">Play Again</button>
-      </div>
-    </div> -->
+    <div id="button_pistas">
+      <button>Pista</button>
+    </div>
     
-    <h1>Ahorcado del diablo</h1>
-    <!-- <div id="timer" style="color: rgb(0, 0, 0);">00:00</div> -->
-    <div class="container.body">
+    <h1>HangmanGame</h1>
+    <div class="containerbody">
       <img class="body" id="parts" src="" alt="" srcset="">
+      <h2 id="crono"><strong>Time:</strong><span id="cronometro">60</span></h2>
     </div>
     <div id="guess"></div>
     <div id="container"></div>
